modified:   library.properties

--- a/library.properties
+++ b/library.properties
@@ -31,7 +31,7 @@ sentence = simple gphoto2 control library for Processsing.
 # 'sentence' always will be prepended, so you should start by writing the
 # second sentence here. If your library only works on certain operating systems,
 # mention it here.
-paragraph = This library can take picture and donwload picture from DSC-QX10.
+paragraph = This library can take picture and donwload picture using gphoto2.
 
 # Links in the 'sentence' and 'paragraph' attributes can be inserted using the
 # same syntax as for authors. 
